# Altrium

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build.yml
res/: altrium-0.1.1-Linux.deb  altrium-0.1.1-Linux.tar.Z
src/: CMakeLists.txt  altrium.cpp  main.cpp
src/libAltrium/: Altrium.cpp  Altrium.hpp  CMakeLists.txt
src/libAltrium/websites/: Bing.cpp  Bing.hpp  DuckDuckGo.cpp  DuckDuckGo.hpp  Github.cpp  Github.hpp  Google.cpp  Google.hpp  Pdf.cpp  Pdf.hpp  Reddit.cpp  Reddit.hpp  StackExchange.cpp  StackExchange.hpp  StackOverflow.cpp  StackOverflow.hpp  Website.cpp  Website.hpp  Wikipedia.cpp  Wikipedia.hpp  Youtube.cpp  Youtube.hpp
src/websites/: Website.hpp
test/: CMakeLists.txt  testAltrium1.sh  testAltrium2.sh
